src/objects/Patient__c.object
<CustomObject>
    <description>Core object in the PRM data model.</description>
    <fields>
        <fullName>Advocate_Email__c</fullName>
        <label>Advocate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advocate_Name__c</fullName>
        <inlineHelpText>Enter in the name of the person that will reprisent the patent.</inlineHelpText>
        <label>Advocate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocate_Phone__c</fullName>
        <label>Advocate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>the data when the lead was born</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Original_Number_Rank__c</fullName>
        <label>Original Number Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Quality__c</fullName>
        <label>Patient Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient_Stage__c</fullName>
        <label>Patient Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swahili</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT -12:00) Eniwetok, Kwajalein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -11:00) Midway Island, Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -10:00) Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -9:00) Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -8:00) Pacific Time (US &amp; Canada)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -7:00) Mountain Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -6:00) Central Time (US &amp; Canada), Mexico City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -4:00) Atlantic Time (Canada), Caracas, La Paz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -3:30) Newfoundland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -3:00) Brazil, Buenos Aires, Georgetown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -2:00) Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -1:00 hour) Azores, Cape Verde Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT) Western Europe Time, London, Lisbon, Casablanca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +1:00 hour) Brussels, Copenhagen, Madrid, Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +2:00) Kaliningrad, South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +3:30) Tehran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +4:30) Kabul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +5:30) Bombay, Calcutta, Madras, New Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +5:45) Kathmandu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +6:00) Almaty, Dhaka, Colombo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +7:00) Bangkok, Hanoi, Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +8:00) Beijing, Perth, Singapore, Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +9:30) Adelaide, Darwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +10:00) Eastern Australia, Guam, Vladivostok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +11:00) Magadan, Solomon Islands, New Caledonia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>